// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`libA.js 1`] = `
declare function foo(x: number): void;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
declare function foo(x: number): void;

`;

exports[`libB.js 1`] = `
declare function bar(x: string): void;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
declare function bar(x: string): void;

`;

exports[`libtest.js 1`] = `
foo(123);
bar(123);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
foo(123);
bar(123);

`;
